Adding missing line numbers in listings

--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -40,7 +40,7 @@ a GitHub https://developer.github.com/v3/guides/managing-deploy-keys/[deploy key
 
 To do so, create a new SSH key pair on your machine like so:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 ssh-keygen -t rsa -b 4096 -C "$(git config user.email)" -f gh-pages -N ""
 ----
