--- a/content/blog/reworking-git-branches-with-git-filter-branch.asciidoc
+++ b/content/blog/reworking-git-branches-with-git-filter-branch.asciidoc
@@ -54,7 +54,7 @@ using this command it should be possible to isolate all the documentation change
 
 To start with a clean slate, we created a new temporary branch based on _1.0_:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git checkout -b docs_backport 1.0
 ----
@@ -62,7 +62,7 @@ git checkout -b docs_backport 1.0
 We then reset the contents of the _documentation_ directory to its state as of the 1.0.0.Final release,
 as that's where the _1.0_ and _master_ branches diverged.
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 rm -rf documentation
 git add documentation
@@ -77,7 +77,7 @@ The next step was to filter all commits on _master_ so to only keep any changes 
 This was done on a new branch, _docs_filtered_.
 The `--subdirectory-filter` option comes in handy for that:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git checkout -b docs_filtered master
 
@@ -94,7 +94,7 @@ But another option, `--tree-filter`, lets us restore the original directory layo
 It allows to run a set of commands against each of the filtered commits.
 We can use this to move the contents of _documentation_ back to that directory:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git filter-branch -f \
     --tree-filter 'mkdir -p documentation; \
@@ -111,7 +111,7 @@ the very first commit removes all contents besides the _documentation_ directory
 This can be fixed by doing an interactive rebase of the current branch,
 beginning at the _v1.0.0.Final_ tag:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git rebase -i v1.0.0.Final
 ----
@@ -121,7 +121,7 @@ all changes besides those to the _documentation_ directory need to be reverted f
 There might be a better way of doing so,
 I simply ran `git checkout` for all the other resources:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git checkout v1.0.0.Final debezium-connector-mongodb
 git checkout v1.0.0.Final debezium-connector-mysql
@@ -132,7 +132,7 @@ At this point the filtered branch still is based off of the _v1.0.0.Final_ tag,
 whereas it should be based off of the _docs_backport_ branch.
 `git rebase --onto` to the rescue:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git rebase --onto docs_backport v1.0.0.Final docs_filtered
 ----
@@ -141,7 +141,7 @@ This rebases all the commits from the _docs_filtered_ branch onto the _docs_back
 Now we have a state where where *all* the documention changes have been cleanly applied to the 1.0 code base,
 i.e. the following should yield no differences:
 
-[source,shell,indent=0]
+[source,shell,indent=0,linenums=true]
 ----
 git diff docs_filtered..master documentation
 ----
