--- a/content/blog/single-message-transforms-swiss-army-knife-of-kafka-connect.asciidoc
+++ b/content/blog/single-message-transforms-swiss-army-knife-of-kafka-connect.asciidoc
@@ -113,7 +113,7 @@ which can be useful when working with partition tables in Postgres, or with data
 * The https://debezium.io/documentation/reference/1.2/configuration/filtering.html[`Filter`] and https://debezium.io/documentation/reference/1.2/configuration/content-based-routing.html[`ContentBasedRouter`] SMTs let you use script expressions in languages such as Groovy or JavaScript for filtering and routing change events based on their contents;
 such script-based approach can be an interesting middleground between ease-of-use (no Java code must be compiled and deployed to Kafka Connect) and expressiveness; e.g. here is how the routing SMT could be used with https://github.com/graalvm/graaljs[GraalVM's JavaScript engine] for routing change events from a table with purchase orders to different topics in Kafka, based on the order type:
 +
-[source]
+[source,linenums=true]
 ----
 ...
 transforms=route
